template: process YAML response
CloudFormation.getTemplate may return a YAML response. Now we attempt to
detect the JSON vs. YAML case and process accordingly.

Imports of lib/template.js now must use qualified names since there are
multiple exports.

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "aws-sdk": "^2.94.0",
     "commander": "^2.11.0",
-    "get-stdin": "^5.0.1"
+    "get-stdin": "^5.0.1",
+    "yaml": ""
   },
   "devDependencies": {
     "aws-sdk-mock": "^1.7.0",
